# CrewLayer

./: .env  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Ctmpcli_core.txt  DEVELOPMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 7a34c12ceaec_add_context_unique_constraint.py  9d4cc5745e91_initial_schema.py  a1b2c3d4e5f6_add_webhook_tables.py  a3b4c5d6e7f8_add_replays.py  a7b8c9d0e1f2_add_agent_status.py  b2c3d4e5f6a7_add_sessions_table.py  b4c5d6e7f8a9_add_prompt_versions.py  b8c9d0e1f2a3_add_memory_status.py  c3d4e5f6a7b8_add_base_importance.py  c5d6e7f8a9b0_add_evaluation_tables.py  c9d0e1f2a3b4_add_context_history.py  d0e1f2a3b4c5_add_agent_tags.py  d4e5f6a7b8c9_add_merged_from.py  d6e7f8a9b0c1_add_criteria_scores_to_evaluations.py  e1f2a3b4c5d6_add_episodic_memory.py  e5f6a7b8c9d0_add_agent_ids_to_api_keys.py  e7f8a9b0c1d2_add_agent_status_history.py  f2a3b4c5d6e7_add_agent_relations.py  f6a7b8c9d0e1_add_audit_log.py  fd806ff82074_add_memory_deleted_at.py
crewlayer/: __init__.py
crewlayer/api/: deps.py
crewlayer/api/middleware/: audit.py  ratelimit.py
crewlayer/api/routes/: actions.py  agents.py  audit.py  auth.py  context.py  episodes.py  evaluations.py  memory.py  metrics.py  prompts.py  sessions.py  streaming.py  usage.py  webhooks.py
crewlayer/api/schemas/: actions.py  audit.py  auth.py  context.py  evaluations.py  memory.py  prompts.py  sessions.py  webhooks.py
crewlayer/cli/: client.py  config.py  main.py
crewlayer/cli/commands/: actions.py  agents.py  keys.py  memory.py  portability.py  tenants.py
crewlayer/core/: config.py  redis.py  security.py
crewlayer/core/actions/: alerts.py  logger.py  replay.py
crewlayer/core/agents/: portability.py  relations.py  status.py
crewlayer/core/context/: blackboard.py
crewlayer/core/embeddings/: client.py
crewlayer/core/evaluation/: abtesting.py  anomalies.py  autojudge.py  ratings.py
crewlayer/core/memory/: decay.py  episodic.py  extractor.py  long.py  merger.py  semantic.py  short.py
crewlayer/core/metrics/: collectors.py
crewlayer/core/prompts/: manager.py
crewlayer/core/ratelimit/: limiter.py
crewlayer/core/sessions/: manager.py
crewlayer/core/streaming/: broker.py  context_broker.py
crewlayer/core/telemetry/: __init__.py  setup.py
crewlayer/core/webhooks/: dispatcher.py
crewlayer/db/: models.py  session.py
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  router.tsx
dashboard/src/api/: actions.ts  agents.ts  (+11 more)
desktop/: README.md  electron-builder.yml  package-lock.json  package.json
desktop/assets/: entitlements.mac.plist
desktop/scripts/: build-backend.sh  download-redis.js
desktop/src/: main.js  preload.js
docs/: README.md  api-reference.html  concepts.html  docs.css  docs.js  index.html  integrations.html  mcp.html  quickstart.html  sdk-python.html  sdk-typescript.html  self-hosting.html
examples/: README.md  auto_evaluation.py  autogen_multiagent.py  evaluation.py  langchain_conversation.py  llamaindex_rag.py  prompt_versioning.py  quickstart.py
examples/nextjs_chatbot/: README.md
landing/: README.md  download.html  index.html
mcp/: INSTRUCTIONS.md  README.md  server.py
observability/prometheus/: prometheus.yml
scripts/: publish_sdk.sh  seed.py
sdk/: README.md  pyproject.toml
sdk-typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk-typescript/src/: client.ts  errors.ts  http.ts  index.ts  streaming.ts  types.ts
sdk-typescript/tests/: actions.test.ts  agents.test.ts  context.test.ts  episodes.test.ts  errors.test.ts  helpers.ts  memory.test.ts  retry.test.ts  sessions.test.ts  streaming.test.ts  vercel-ai.test.ts
sdk/crewlayer/: __init__.py  _actions.py  _client.py  _context.py  _evaluations.py  _exceptions.py  _http.py  _memory.py  _prompts.py  _types.py
sdk/crewlayer/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llamaindex.py
sdk/tests/: test_autogen_integration.py  test_crewai_integration.py  test_langchain_integration.py  test_llamaindex_integration.py
tests/: conftest.py  test_action_replay.py  test_actions.py  test_agent_alerts.py  test_agent_portability.py  test_agent_relations.py  test_agent_status.py  test_agent_tags.py  test_audit_log.py  test_auth.py  test_autojudge.py  test_cli.py  test_context.py  test_context_history.py  test_context_subscribe.py  test_episodic_memory.py  test_evaluations.py  test_mcp_server.py  test_memory.py  test_memory_decay.py  test_memory_dedup.py  test_memory_importance.py  test_metrics.py  test_prompts.py  test_ratelimit.py  test_scopes.py  test_sessions.py  test_streaming.py  test_telemetry.py  test_webhooks.py
(+55 files in other folders)
