[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewlayer"
version = "0.1.0"
description = "Official Python SDK for CrewLayer — persistent memory and action logging for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ai", "agents", "memory", "crewlayer"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.28.0"]
llamaindex = ["llama-index-core>=0.10.0"]
all-integrations = ["langchain-core>=0.2.0", "crewai>=0.28.0", "llama-index-core>=0.10.0"]

[project.urls]
Homepage = "https://github.com/your-org/crewlayer"
Documentation = "https://docs.crewlayer.dev"

[tool.hatch.build.targets.wheel]
packages = ["crewlayer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
